# ROS_2025

./: CMakeLists.txt  README.md  package.xml
carrot/: CMakeLists.txt  package.xml
carrot/launch/: turtle_tf_demo.launch
carrot/scripts/: turtle_tf_broadcaster.py  turtle_tf_listener.py
lab3/: CMakeLists.txt  package.xml
lab3/config/: extra_params.yaml  pid_params.yaml
lab3/launch/: another_one.launch  my_first.launch  param_test.launch  params_example.launch  poly_system.launch  simple_test.launch  with_args.launch
lab3/scripts/: polynominal_node.py  request_node.py  summing_node.py  test_simple.py
my_carrot/: CMakeLists.txt  package.xml
my_carrot/launch/: rotating_carrot_demo.launch
my_carrot/scripts/: chase_rotating_carrot.py  rotating_carrot_broadcaster.py
script/: second_node.py
super_liza/: CMakeLists.txt  package.xml
