<?xml version="1.0"?>
<package format="2">
  <name>my_carrot</name>
  <version>0.0.1</version>
  <description>Пакет с вращающейся морковкой вокруг черепашки</description>

  <maintainer email="elizaveta@todo.todo">elizaveta</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>turtlesim</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
